--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shreya | Portfolio</title>
   <!-- <link rel="icon" href="/favicon-v2.ico" type="image/x-icon"> -->
-   <link rel="icon" href="/favicon.ico">
-   <link rel="apple-touch-icon" href="/favicon.ico">
+   <link rel="icon" href="/favicon-v2.ico">
+   <link rel="apple-touch-icon" href="/favicon-v2.ico">
    <meta name="theme-color" content="#020617">
 
 
