enhance personal branding copy and polish footer messaging

--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
    <link rel="apple-touch-icon" href="/favicon-v2.ico">
    <meta name="theme-color" content="#020617">
 
-
-  
-
-
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -61,8 +57,10 @@
             Hi, I'm <span>Shreya B</span>
           </h1>
           <p class="hero-subtitle">
-            I design and build responsive, user-centric web experiences with
-            a focus on performance, accessibility, and clean UI.
+            <b>I approach development with a simple philosophy:</b>
+            most problems don’t disappear; they just wait in the console.</p>
+            <p class="hero-subtitle">
+            <b>My mindset is shaped by one rule:</b> when something breaks, the console already knows why.
           </p>
           <div class="domain-tags">
   <span class="tag">Full-Stack Developer</span>
@@ -265,9 +263,9 @@
               freelance projects, and collaborations.
             </p>
             <ul class="contact-list">
-              <li>Email: <a href="mailto:yourmail@example.com">yourmail@example.com</a></li>
-              <li>GitHub: <a href="https://github.com/your-github" target="_blank">github.com/your-github</a></li>
-              <li>LinkedIn: <a href="https://linkedin.com/in/your-linkedin" target="_blank">linkedin.com/in/your-linkedin</a></li>
+              <li>Email: <a href="shreyabaala2004@gmail.com">shreyabaala2004@gmail.com</a></li>
+              <li>GitHub: <a href="https://github.com/shreya-13-04" target="_blank">shreya-13-04</a></li>
+              <li>LinkedIn: <a href="https://www.linkedin.com/in/shreyabalasubramani/" target="_blank">Shreya balasubramani</a></li>
             </ul>
           </div>
 
@@ -298,7 +296,7 @@
   <footer class="footer">
     <div class="container footer-container">
       <p>&copy; <span id="year"></span> Shreya. All rights reserved.</p>
-      <p class="footer-small">Built with HTML, CSS &amp; JavaScript.</p>
+      <p class="footer-small">Training models and myself - both overfit sometimes.</p>
     </div>
   </footer>
 
