Added project to the Project section

--- a/index.html
+++ b/index.html
@@ -299,6 +299,26 @@
 
         <div class="projects-grid">
           <!-- Project 1 -->
+           <article class="project-card">
+            <div class="project-tag">Computer Vision</div>
+            <div class="project-tag">AI</div>
+            <h3>YOLOv8-Based Mobile Phone Detection System</h3>
+            <p>
+              Built a real-time detection system using custom datasets, 
+              leveraging YOLOv8 and OpenCV to enhance classroom monitoring accuracy.
+            </p>
+            <div class="project-meta">
+              <span>YOLOv8</span>
+              <span>Python</span>
+              <span>OpenCV</span>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/shreya-13-04/Mobile-Phone-Detection" target="_blank">Github</a>
+            </div>
+          </article>
+          
+
+          <!-- Project 2 -->
           <article class="project-card">
             <div class="project-tag">Web</div>
             <h3>Hearth – Recipe Book</h3>
@@ -314,24 +334,6 @@
             <div class="project-links">
               <a href="https://github.com/your-github/hearth" target="_blank">Code</a>
               <!-- <a href="#" target="_blank">Live</a> -->
-            </div>
-          </article>
-
-          <!-- Project 2 -->
-          <article class="project-card">
-            <div class="project-tag">Computer Vision</div>
-            <h3>Mobile Phone Detection in Classrooms</h3>
-            <p>
-              Real-time YOLOv8-based system to detect mobile phone usage in
-              classroom environments using a custom dataset.
-            </p>
-            <div class="project-meta">
-              <span>YOLOv8</span>
-              <span>Python</span>
-              <span>OpenCV</span>
-            </div>
-            <div class="project-links">
-              <a href="https://github.com/your-github/phone-detection" target="_blank">Code</a>
             </div>
           </article>
 
