Updated the navigation Bar

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <nav class="nav-links" id="navLinks">
         <a href="#home" class="nav-link active">Home</a>
         <a href="#about" class="nav-link">About</a>
+        <a href="#education" class="nav-link">Education</a>
         <a href="#skills" class="nav-link">Skills</a>
         <a href="#projects" class="nav-link">Projects</a>
         <a href="#contact" class="nav-link">Contact</a>
@@ -161,7 +162,7 @@
   <div class="about-image reveal-left">
     <img src="css/js/assets/img/school.jpg" alt="College campus" />
   </div>
-      
+  <section class="section" id="education"> 
   <div class="about-content reveal-right">
     <!-- TEXT CONTENT -->
     
@@ -200,7 +201,7 @@
     <img src="css/js/assets/img/college1.jpg" alt="College campus" />
   </div>
 </section>
-
+</section>
 <!-- ===== SKILLS ===== -->
 <section class="section skills-galaxy" id="skills">
   <div class="container">
