Updated Contact Section

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
     <!-- ===== CONTACT ===== -->
     <section class="section" id="contact">
       <div class="container">
-        <h2 class="section-title">Contact</h2>
+        <h2 class="hero-title"><span>Contact</span></h2>
         <p class="section-intro">
           Interested in working together, or just want to say hi? Drop a message.
         </p>
